<resources>
    <string name="app_name">WheelController</string>
    <string name="arrow">Arrow</string>
    <string name="enter_wheelchair_id">Enter wheelchair id</string>
    <string name="continue_">Continue</string>
    <string name="enter_wheelchair_password">Enter wheelchair password</string>
    <string name="cancel">Cancel</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="connect">Connect</string>
    <string name="my_user_id">my user_id</string>
    <string name="show">show</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="play_pause">play pause</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="not_moving">Not moving</string>
    <string name="enter_credentials_and_continue">Enter credentials and continue</string>
    <string name="logging_in">Logging-in…</string>
    <string name="swipe_up_icon">Swipe up icon</string>
    <string name="mic">mic</string>
    <string name="listening">listening…</string>
    <string name="please_wait">Please wait…</string>
    <string name="already_running">Already running</string>
    <string name="wheelchair_id">Wheelchair ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_know_how_to_use">Don\'t know how to use?</string>
    <string name="see_instructions">See instructions</string>
    <string name="don_t_understand">Don\'t understand?</string>
    <string name="processing_your_request">Processing your request...</string>
    <string name="last_active">Last active</string>
    <string name="last_active_some_time_ago">Last active some time ago</string>
    <string name="refresh">Refresh</string>
    <string name="how_to_connect">How to connect</string>
    <string name="steps_for_operating">Steps for operating</string>
    <string name="dot">.</string>
    <string name="bullet_point">bullet point</string>
    <string name="reload">Reload</string>
    <string name="see_logs">See Logs</string>


</resources>