<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="2dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/myProgress"
            android:layout_centerHorizontal="true"
            android:text="@string/not_connected"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/myProgress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.wheelcontroller.classes.MyProgressBar
            android:id="@+id/myProgress"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            app:auto_run="false"
            app:duration="500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loop="true"
            app:pathWidth="2dp"
            app:ratio="1" />

        <ImageView
            android:id="@+id/ivPower"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/connect"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_power_settings_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/neu_background_main"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/my_user_id"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonShowConnection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.widget.Button
            android:id="@+id/buttonShowConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:padding="4dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/show"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/video_view_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <com.example.wheelcontroller.classes.MyProgressBar
                android:id="@+id/myProgressVideo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:auto_run="true"
                app:loop="true"
                app:duration="500"
                app:pathWidth="2dp"
                android:layout_centerInParent="true" />

            <com.google.android.exoplayer2.ui.PlayerView
                android:visibility="invisible"
                android:id="@+id/exoPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:use_controller="true"
                app:hide_on_touch="true"
                android:soundEffectsEnabled="false"
                app:player_layout_id="@layout/exo_styled_player_view"
                app:resize_mode="fit"
                app:show_timeout="4000"
                app:controller_layout_id="@layout/custom_controller"/>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" >

            <LinearLayout
                android:id="@+id/llRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/direction_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/llStartStop"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/ic_all_direction"
                    app:tint="#BB00FF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/direction_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llStartStop" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/arrow"
                    android:rotation="90"
                    android:src="@drawable/ic_all_direction"
                    app:tint="#CC0000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStartStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/direction_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivStartStop"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/ic_all_direction"
                    app:tint="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/direction_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/llStartStop"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/arrow"
                    android:rotation="180"
                    android:src="@drawable/ic_all_direction"
                    app:tint="#25AC00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/direction_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/llStartStop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/arrow"
                    android:rotation="270"
                    android:src="@drawable/ic_all_direction"
                    app:tint="#0048C8"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
