<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="2dp"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:id="@+id/tvLastActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/myProgress"
            android:layout_centerHorizontal="true"
            android:text="@string/last_active_some_time_ago"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/myProgress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.wheelcontroller.classes.MyProgressBar
            android:id="@+id/myProgress"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            app:auto_run="false"
            app:duration="500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loop="true"
            app:pathWidth="2dp"
            app:ratio="1" />

        <ImageView
            android:id="@+id/ivPower"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/connect"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_power_settings_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rlGesture"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/stroke_only"
            android:backgroundTint="#998A62EA"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/swipe_up_icon"
                android:src="@drawable/baseline_close_24" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>